fix: spacings and alignments of listing blocks (#945)
* fix: fixed spacings and alignments of listing blocks

* fix: fixed ribbonCard margin

* docs: release log

---------

--- a/src/theme/ItaliaTheme/Blocks/_completeBlockLinkstemplate.scss
+++ b/src/theme/ItaliaTheme/Blocks/_completeBlockLinkstemplate.scss
@@ -1,12 +1,6 @@
 .complete-block-links-template {
-  margin: 40px 0;
-
   a {
     text-decoration: none;
-  }
-
-  .col-item {
-    margin-bottom: 22px;
   }
 
   .image-container {
